registerProf Creado, responsive y mejorando aspectos de todas las pag

--- a/public/css/register.css
+++ b/public/css/register.css
@@ -30,6 +30,11 @@ main {
   height: 30px;
 }
 
+.team-list label select {
+  width: 100%;
+  height: 30px;
+}
+
 /* .confirm-button {
   margin: auto;
   padding: 15px;
