--- a/views/productCart.html
+++ b/views/productCart.html
@@ -13,6 +13,7 @@
   <link rel="stylesheet" href="/css/theme.css" />
   <link rel="stylesheet" href="/css/productDetail.css" />
   <link rel="stylesheet" href="/css/productCart.css" />
+  <link rel="stylesheet" href="/css/tablet.css" />
   <link rel="stylesheet" href="/css/tablet-index.css" />
   <link rel="stylesheet" href="/css/desktop-index.css" />
   <link rel="stylesheet" href="/css/desktop-productCart.css" />
@@ -73,11 +74,15 @@
       </div>
     </section>
     <div class="login">
+      <a href="login">
+        <p class="txt-ingresar">Ingresar</p>
+      </a>
       <div>
         <p><i class="fas fa-user"></i> <i class="fas fa-chevron-down"></i></p>
-        <p class="txt-ingresar">Ingresar</p>
+
         <!-- ocultar txt en mobile, mostrar en el resto -->
       </div>
+
       <div class="cart">
         <i class="fas fa-shopping-cart"></i>
         <i class="fas fa-chevron-down"></i>
