--- a/public/css/login.css
+++ b/public/css/login.css
@@ -8,6 +8,11 @@
   width: 90%;
   padding: 20px;
   max-width: 700px;
+  background-color: white;
+}
+
+.form-login div {
+  font-weight: bold;
 }
 
 .username {
@@ -44,5 +49,15 @@
 
 .password-forgotten {
   text-align: center;
-  padding: 30px;
+  background-color: white;
+  width: 90%;
+  padding: 20px;
+  max-width: 700px;
+  background-color: white;
+  margin: auto;
+}
+
+.password-forgotten a {
+  color: black;
+  text-decoration: none;
 }
