--- a/public/css/theme.css
+++ b/public/css/theme.css
@@ -241,6 +241,7 @@ main {
   text-align: center;
   margin-top: 20px;
   border: 10px black double;
+  background-color: white;
 }
 
 .partner-companies {
@@ -250,7 +251,13 @@ main {
   text-align: center;
   margin-top: 20px;
   border: 10px black double;
+  background-color: white;
 }
+
+.footer {
+  background-color: white;
+}
+
 .phrase-footer {
   text-align: center;
   margin-top: 20px;
@@ -259,6 +266,11 @@ main {
 
 .titles-footer {
   flex-wrap: wrap;
+}
+
+.titles-footer a {
+  color: black;
+  text-decoration: none;
 }
 
 .list-footer {
