--- a/views/index.html
+++ b/views/index.html
@@ -16,6 +16,7 @@
   <!-- estilos -->
   <link rel="stylesheet" href="/css/style.css" />
   <link rel="stylesheet" href="/css/theme.css" />
+  <link rel="stylesheet" href="/css/tablet.css" />
   <link rel="stylesheet" href="/css/tablet-index.css" />
   <link rel="stylesheet" href="/css/desktop-index.css" />
 
@@ -75,11 +76,15 @@
       </div>
     </section>
     <div class="login">
+      <a href="login">
+        <p class="txt-ingresar">Ingresar</p>
+      </a>
       <div>
         <p><i class="fas fa-user"></i> <i class="fas fa-chevron-down"></i></p>
-        <p class="txt-ingresar">Ingresar</p>
+
         <!-- ocultar txt en mobile, mostrar en el resto -->
       </div>
+
       <div class="cart">
         <i class="fas fa-shopping-cart"></i>
         <i class="fas fa-chevron-down"></i>
