--- a/views/login.html
+++ b/views/login.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="/css/style.css" />
   <link rel="stylesheet" href="/css/theme.css" />
   <link rel="stylesheet" href="/css/login.css" />
+  <link rel="stylesheet" href="/css/tablet.css" />
   <link rel="stylesheet" href="/css/tablet-index.css" />
   <link rel="stylesheet" href="/css/desktop-index.css" />
   <link rel="stylesheet" href="/css/desktop-login.css" />
@@ -71,11 +72,15 @@
       </div>
     </section>
     <div class="login">
+      <a href="login">
+        <p class="txt-ingresar">Ingresar</p>
+      </a>
       <div>
         <p><i class="fas fa-user"></i> <i class="fas fa-chevron-down"></i></p>
-        <p class="txt-ingresar">Ingresar</p>
+
         <!-- ocultar txt en mobile, mostrar en el resto -->
       </div>
+
       <div class="cart">
         <i class="fas fa-shopping-cart"></i>
         <i class="fas fa-chevron-down"></i>
