--- a/views/index.html
+++ b/views/index.html
@@ -86,7 +86,7 @@
       </div>
 
       <div class="cart">
-        <i class="fas fa-shopping-cart"></i>
+        <a href="productCart"><i class="fas fa-shopping-cart"></i></a>
         <i class="fas fa-chevron-down"></i>
       </div>
     </div>
