--- a/views/login.html
+++ b/views/login.html
@@ -82,7 +82,7 @@
       </div>
 
       <div class="cart">
-        <i class="fas fa-shopping-cart"></i>
+        <a href="productCart"><i class="fas fa-shopping-cart"></i></a>
         <i class="fas fa-chevron-down"></i>
       </div>
     </div>
