--- a/public/css/theme.css
+++ b/public/css/theme.css
@@ -92,6 +92,10 @@ main {
   margin: auto;
   font-size: 1.1em;
 }
+
+.fa-shopping-cart {
+  color: rgb(248, 212, 92);
+}
 .categories {
   display: flex;
   width: 40%;
