hechos los parcials menos head, agregado controllers y corregido el nav

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -16,126 +16,37 @@
   <link rel="stylesheet" href="/css/tablet-index.css" />
   <link rel="stylesheet" href="/css/desktop-index.css" />
   <link rel="stylesheet" href="/css/desktop-login.css" />
-  <title>estas en index</title>
+  <title>Soluciones Profesionales</title>
 </head>
 
 <body>
-  <header class="header-ppal">
-    <div class="header-top">
-      <a href="/"><img src="/images/logo-soluciones-profesionales.png" alt="logo sin fondo" /></a>
-      <div class="search-bar">
-        <input type="text" name="search-item">
-        <button class="search-button"><i class="fas fa-search"></i></button>
-      </div>
-      <div class="top-phrase">
 
-        <p><i class="fas fa-handshake"></i>Reservá Sin Problemas,</p>
-        <p>Cancela Sin Costo Agregado<i class="fas fa-handshake-slash"></i></p>
+  <%- include("./partials/header") %>
 
-      </div>
-    </div>
-    <div class="header-bottom">
-      <div class="social">
-        <div class="logo-ig"><i class="fab fa-instagram"></i></div>
-        <div class="logo-face">
-          <i class="fab fa-facebook-f"></i>
+    <main>
+      <form action="" method="" class="form-login">
+        <div class="username">
+          <label for="username">Nombre de Usuario:</label>
+          <input type="text" name="username" id="username">
         </div>
-        <div class="logo-twitter">
-          <i class="fab fa-twitter"></i>
+        <div class="password">
+          <label for="password">Contraseña:</label>
+          <input type="password" name="password" id="password">
         </div>
-        <div class="logo-youtube">
-          <i class="fab fa-youtube"></i>
+        <div class="login-button">
+          <button type="submit">Enviar</button>
         </div>
-      </div>
-      <div>
-        <p class="top-title-per-device">La Solución que Buscás, con el Profesionalismo que Necesitás</p>
-        <!-- modificar tamaño per device -->
-      </div>
-      <div class="icon-contact">
-        <div class="logo-gmail">
-          <i class="fas fa-envelope"></i>
-        </div>
-        <div class="logo-whatsapp">
-          <i class="fab fa-whatsapp"></i>
-        </div>
-      </div>
-    </div>
-  </header>
-  <nav class="nav-login">
-    <section class="categories">
-      <div>
-        <p>CATEGORIAS <i class="fas fa-chevron-down"></i></p>
-      </div>
-      <div class="prof-zona">
-        <p>Prof. por Zona <i class="fas fa-hard-hat"></i></p>
-        <!-- ocultar boton en mobile, mostrar en el resto -->
-      </div>
-    </section>
-    <div class="login">
-      <a href="login">
-        <p class="txt-ingresar">Ingresar</p>
-      </a>
-      <div>
-        <p><i class="fas fa-user"></i> <i class="fas fa-chevron-down"></i></p>
-
-        <!-- ocultar txt en mobile, mostrar en el resto -->
+      </form>
+      <div class="password-forgotten">
+        <a href="">¿Olvidaste la Contraseña?</a>
       </div>
 
-      <div class="cart">
-        <a href="productCart"><i class="fas fa-shopping-cart"></i></a>
-        <i class="fas fa-chevron-down"></i>
-      </div>
-    </div>
-  </nav>
-  <main>
-    <form action="" method="" class="form-login">
-      <div class="username">
-        <label for="username">Nombre de Usuario:</label>
-        <input type="text" name="username" id="username">
-      </div>
-      <div class="password">
-        <label for="password">Contraseña:</label>
-        <input type="password" name="password" id="password">
-      </div>
-      <div class="login-button">
-        <button type="submit">Enviar</button>
-      </div>
-    </form>
-    <div class="password-forgotten">
-      <a href="">¿Olvidaste la Contraseña?</a>
-    </div>
-    <section class="ad">
-      <p>Publicidad Animada</p>
-    </section>
-    <section class="partner-companies">
-      <p>empresas que confiaron en nosotros</p>
-      <p>Logos de empresas</p>
-    </section>
-    <div class="dot-carousel">
-      <p><i class="fas fa-ellipsis-h"></i></p>
-    </div>
-  </main>
-  <footer class="footer">
-    <div>
-      <h4 class="phrase-footer">Servicios para Empresas y Pymes</h4>
-    </div>
-    <section>
-      <div class="titles-footer">
-        <ul class="list-footer">
-          <li><a href="">Terminos y Condiciones</a></li>
-          <li><a href="">Ayuda</a></li>
-          <li>
-            <a href="registerProf">Trabaja con Nosotros</a>
-          </li>
-          <li><a href="">Contacto</a></li>
-        </ul>
-      </div>
-      <div class="Copyright">
-        <p>Copyright © 2021-2021</p>
-        <p>Calle Falsa 123, Springfield</p>
-      </div>
-    </section>
-  </footer>
+      <%- include("./partials/ad-bottom-body") %>
+
+    </main>
+
+    <%- include("./partials/footer") %>
+
 </body>
 
 </html>
