--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,161 +20,40 @@
   <link rel="stylesheet" href="/css/tablet-index.css" />
   <link rel="stylesheet" href="/css/desktop-index.css" />
 
-  <title>estas en index</title>
+  <title>Soluciones Profesionales</title>
 </head>
 
 <body>
-  <header class="header-ppal">
-    <div class="header-top">
-      <a href="/"><img src="/images/logo-soluciones-profesionales.png" alt="logo sin fondo" /></a>
-      <div class="search-bar">
-        <input type="text" name="search-item">
-        <button class="search-button"><i class="fas fa-search"></i></button>
-      </div>
-      <div class="top-phrase">
 
-        <p><i class="fas fa-handshake"></i>Reservá Sin Problemas,</p>
-        <p>Cancela Sin Costo Agregado<i class="fas fa-handshake-slash"></i></p>
+  <%- include("./partials/header") %>
 
-      </div>
-    </div>
-    <div class="header-bottom">
-      <div class="social">
-        <div class="logo-ig"><i class="fab fa-instagram"></i></div>
-        <div class="logo-face">
-          <i class="fab fa-facebook-f"></i>
+    <main>
+      <div class="all-index">
+
+        <div>
+          <p class="title-per-device">La solución que buscas, con el profesionalismo que necesitas</p>
+          <!-- modificar tamaño per device -->
         </div>
-        <div class="logo-twitter">
-          <i class="fab fa-twitter"></i>
+        <section class="services-carousel">
+          <p>Lugar para imagenes de servicios en carousel</p>
+        </section>
+        <div class="dot-carousel">
+          <p><i class="fas fa-ellipsis-h"></i></p>
         </div>
-        <div class="logo-youtube">
-          <i class="fab fa-youtube"></i>
+        <div class="work-with-us-button">
+          <a href="registerProf"><button type="submit">Sumáte a Nuestro Equipo de Profesionales</button></a>
         </div>
-      </div>
-      <div>
-        <p class="top-title-per-device">La Solución que Buscás, con el Profesionalismo que Necesitás</p>
-        <!-- modificar tamaño per device -->
-      </div>
-      <div class="icon-contact">
-        <div class="logo-gmail">
-          <i class="fas fa-envelope"></i>
-        </div>
-        <div class="logo-whatsapp">
-          <i class="fab fa-whatsapp"></i>
-        </div>
-      </div>
-    </div>
-  </header>
-  <nav class="nav-login">
-    <section class="categories">
-      <div>
-        <p>CATEGORIAS <i class="fas fa-chevron-down"></i></p>
-      </div>
-      <div class="prof-zona">
-        <p>Prof. por Zona <i class="fas fa-hard-hat"></i></p>
-        <!-- ocultar boton en mobile, mostrar en el resto -->
-      </div>
-    </section>
-    <div class="login">
-      <a href="login">
-        <p class="txt-ingresar">Ingresar</p>
-      </a>
-      <div>
-        <p><i class="fas fa-user"></i> <i class="fas fa-chevron-down"></i></p>
+        <h3 class="title-categories">Categorias mas Solicitadas</h3>
+        <%- include("./partials/categories-examples") %>
 
-        <!-- ocultar txt en mobile, mostrar en el resto -->
-      </div>
 
-      <div class="cart">
-        <a href="productCart"><i class="fas fa-shopping-cart"></i></a>
-        <i class="fas fa-chevron-down"></i>
-      </div>
-    </div>
-  </nav>
-  <main>
-    <div class="all-index">
+          <%- include("./partials/ad-bottom-body") %>
 
-      <div>
-        <p class="title-per-device">La solución que buscas, con el profesionalismo que necesitas</p>
-        <!-- modificar tamaño per device -->
       </div>
-      <section class="services-carousel">
-        <p>Lugar para imagenes de servicios en carousel</p>
-      </section>
-      <div class="dot-carousel">
-        <p><i class="fas fa-ellipsis-h"></i></p>
-      </div>
-      <div class="work-with-us-button">
-        <a href="registerProf"><button type="submit">Sumáte a Nuestro Equipo de Profesionales</button></a>
-      </div>
-      <h3 class="title-categories">Categorias mas Solicitadas</h3>
-      <section class="icon-categories">
-        <article class="icon-article">
-          <!-- mecanica auto -->
-          <i class="fas fa-wrench"></i>
-          <p class="icon-txt">Mecanicos/as</p>
-        </article>
-        <article class="icon-article">
-          <!-- electricista -->
-          <i class="fas fa-plug"></i>
-          <p class="icon-txt">Electricistas</p>
-        </article>
-        <article class="icon-article">
-          <!-- dentistas -->
-          <i class="fas fa-tooth"></i>
-          <p class="icon-txt">Odontologos/as</p>
-        </article>
-        <article class="icon-article">
-          <!-- plomeria -->
-          <i class="fas fa-faucet"></i>
-          <p class="icon-txt">Plomeros/as</p>
-        </article>
-        <article class="icon-article">
-          <!-- carpinteria -->
-          <i class="fas fa-hammer"></i>
-          <p class="icon-txt">Carpinteros/as/
-          <p>
-        </article>
-        <article class="icon-article">
-          <!-- pintores -->
-          <i class="fas fa-paint-roller"></i>
-          <p class="icon-txt">Pintores/as</p>
-        </article>
+    </main>
 
-      </section>
-      <section class="ad">
-        <p>Publicidad Animada</p>
-      </section>
-      <section class="partner-companies">
-        <p>empresas que confiaron en nosotros</p>
-        <p>Logos de empresas</p>
-      </section>
-      <div class="dot-carousel">
-        <p><i class="fas fa-ellipsis-h"></i></p>
-      </div>
-    </div>
-  </main>
-  <footer class="footer">
-    <div>
-      <h4 class="phrase-footer">Servicios para Empresas y Pymes</h4>
-    </div>
-    <section>
-      <div class="titles-footer">
-        <ul class="list-footer">
-          <li><a href="">Terminos y Condiciones</a></li>
-          <li><a href="">Ayuda</a></li>
-          <li>
-            <a href="registerProf">Trabaja con Nosotros</a>
-          </li>
-          <li><a href="">Contacto</a></li>
-        </ul>
-      </div>
-      <div class="Copyright">
-        <p>Copyright © 2021-2021</p>
-        <p>Calle Falsa 123, Springfield</p>
-      </div>
-    </section>
-  </footer>
+    <!-- footer -->
+    <%- include("./partials/footer") %>
 </body>
 
 </html>
