--- a/public/css/productDetail.css
+++ b/public/css/productDetail.css
@@ -105,3 +105,22 @@ main {
   border: double rgb(49, 71, 92) 10px;
   font-weight: normal;
 }
+
+.confirm-button {
+  margin: auto;
+  padding: 15px;
+  width: 60%;
+  text-align: center;
+}
+.confirm-button button {
+  font-size: 25px;
+  border-radius: 5px;
+  background-color: rgb(49, 71, 92);
+  color: rgb(248, 212, 92);
+  /* box-shadow: 8px 8px 5px rgb(248, 212, 92); */
+  width: 95%;
+  padding: 10px;
+}
+.confirm-button button:hover {
+  box-shadow: 6px 6px 30px rgb(248, 212, 92);
+}
