--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,24 +3,18 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <!-- para dispositivos -->
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <!-- fuentes a usar -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;700&display=swap" rel="stylesheet">
-  <!-- iconos -->
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
-  <!-- estilos -->
-  <link rel="stylesheet" href="/css/style.css" />
-  <link rel="stylesheet" href="/css/theme.css" />
-  <link rel="stylesheet" href="/css/tablet.css" />
-  <link rel="stylesheet" href="/css/tablet-index.css" />
-  <link rel="stylesheet" href="/css/desktop-index.css" />
 
-  <title>Soluciones Profesionales</title>
+  <!-- etiquetas meta e iconos y font -->
+
+  <%- include("./partials/head-no-css") %>
+
+    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="/css/theme.css" />
+    <link rel="stylesheet" href="/css/tablet.css" />
+    <link rel="stylesheet" href="/css/tablet-index.css" />
+    <link rel="stylesheet" href="/css/desktop-index.css" />
+
+    <title>Soluciones Profesionales</title>
 </head>
 
 <body>
