--- a/views/productCart.ejs
+++ b/views/productCart.ejs
@@ -2,23 +2,19 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;700&display=swap" rel="stylesheet">
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
-  <link rel="stylesheet" href="/css/style.css" />
-  <link rel="stylesheet" href="/css/theme.css" />
-  <link rel="stylesheet" href="/css/productDetail.css" />
-  <link rel="stylesheet" href="/css/productCart.css" />
-  <link rel="stylesheet" href="/css/tablet.css" />
-  <link rel="stylesheet" href="/css/tablet-index.css" />
-  <link rel="stylesheet" href="/css/desktop-index.css" />
-  <link rel="stylesheet" href="/css/desktop-productCart.css" />
 
-  <title>Soluciones Profesionales</title>
+  <%- include("./partials/head-no-css") %>
+
+    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="/css/theme.css" />
+    <link rel="stylesheet" href="/css/productDetail.css" />
+    <link rel="stylesheet" href="/css/productCart.css" />
+    <link rel="stylesheet" href="/css/tablet.css" />
+    <link rel="stylesheet" href="/css/tablet-index.css" />
+    <link rel="stylesheet" href="/css/desktop-index.css" />
+    <link rel="stylesheet" href="/css/desktop-productCart.css" />
+
+    <title>Soluciones Profesionales</title>
 </head>
 
 <body>
